force-app/main/default/objects/Stripe_Settings__c/fields/Is_Live__c.field-meta.xml
<CustomField>
    <fullName>Is_Live__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Live</label>
    <type>Checkbox</type>
</CustomField>