force-app/main/default/objects/Stripe_Settings__c/listViews/All_Settings.listView-meta.xml
<ListView>
    <fullName>All_Settings</fullName>
    <columns>Is_Live__c</columns>
    <columns>Stripe_Publishable_Live_Key__c</columns>
    <columns>Stripe_Secret_Live_Key__c</columns>
    <columns>Stripe_Publishable_Test_Key__c</columns>
    <columns>Stripe_Secret_Test_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Settings</label>
</ListView>